--- a/laravel/backend-presencas/composer.json
+++ b/laravel/backend-presencas/composer.json
@@ -7,10 +7,12 @@
     "require": {
         "php": "^7.3|^8.0",
         "fruitcake/laravel-cors": "^2.0",
+        "google/apiclient": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "spatie/laravel-google-calendar": "^3.5"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
@@ -23,9 +25,13 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/",
+            "Google\\": "vendor/google/apiclient/src/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        }
+        },
+        "classmap": [
+            "vendor/google/apiclient/src/"
+         ]
     },
     "autoload-dev": {
         "psr-4": {
